force-app/main/default/objects/Boat__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1</fullName><default>false</default><label>1</label></value>
            <value><fullName>2</fullName><default>false</default><label>2</label></value>
            <value><fullName>4</fullName><default>false</default><label>4</label></value>
            <value><fullName>5</fullName><default>false</default><label>5</label></value>
            <value><fullName>8</fullName><default>false</default><label>8</label></value>
            <value><fullName>9</fullName><default>false</default><label>9</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>