force-app/main/default/objects/Boat__c/fields/Has_Cox__c.field-meta.xml
<CustomField>
    <fullName>Has_Cox__c</fullName>
    <label>Has Cox</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>