force-app/main/default/objects/Boat__c/fields/Number_of_Oars__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Oars__c</fullName>
    <label>Number of Oars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>