force-app/main/default/objects/Boat__c/fields/Restricted_Groups__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Groups__c</fullName>
    <label>Restricted Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Competition Junior</fullName><default>false</default><label>Competition Junior</label></value>
            <value><fullName>Master</fullName><default>false</default><label>Master</label></value>
            <value><fullName>Leisure</fullName><default>false</default><label>Leisure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>