force-app/main/default/objects/Boat__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>true</default><label>Available</label></value>
            <value><fullName>In Use</fullName><default>false</default><label>In Use</label></value>
            <value><fullName>Under Repair</fullName><default>false</default><label>Under Repair</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>